configs/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paysecure
  labels:
    app.kubernetes.io/part-of: paysecure
    environment: production
